fix error footer is behind the notFound component

--- a/src/app/website/pages/pet-detail/pet-detail.component.scss
+++ b/src/app/website/pages/pet-detail/pet-detail.component.scss
@@ -92,6 +92,11 @@ a {
   width: 100%;
 }
 
+.notFound__container{
+  width: 100%;
+  height: 550px;
+}
+
 @media screen and (min-width: 48rem) {
   .petpost-page {
     margin-top: 40px;
